avanzare in layout issues e inserire transmediale

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -56,6 +56,18 @@ body {
   line-height: 0.95;
 }
 
+.j-lh-11 {
+  line-height: 1.1;
+}
+
+.j-lh-12 {
+  line-height: 1.2;
+}
+
+.j-lh-13 {
+  line-height: 1.3;
+}
+
 
 .j-fs-070em {
   font-size: 0.70em;
